Completed part two of the homework assignment.

--- a/head-and-body.html
+++ b/head-and-body.html
@@ -19,17 +19,14 @@
     </ul>
   </div>
   <h1>HEAD AND BODY</h1>
-  <a href="http://fc09.deviantart.net/fs30/f/2008/065/9/f/Old_men_II_by_bisiobisio.jpg"><img src="http://fc09.deviantart.net/fs30/f/2008/065/9/f/Old_men_II_by_bisiobisio.jpg"></a>
+  <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Chocolate_Chip_Cookies_-_kimberlykv.jpg/512px-Chocolate_Chip_Cookies_-_kimberlykv.jpg"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Chocolate_Chip_Cookies_-_kimberlykv.jpg/512px-Chocolate_Chip_Cookies_-_kimberlykv.jpg"></a>
   
   <h6><strong>photo courtesy of google images (click the link for more info)</strong></h6>
   <div>
   
-  <h3><p>So, I've been taugh the basics of how to make a webpage. I think this is pretty stinkin' cool! Let's dive in to talking about how to actually make a webpage using html...</p>
-  <p>You start off by telling the webpage interpreter (Google Chrome, Firefox, etc) with an html tag. It looks like.</p>
+  <h3><p>The head and body of the html file are pretty important. They contain important information about what the site should do. Tags are littered throughout both, but here's the difference: </p>
+  <p>In the head you can put styling, and load in files that interact with and change the way the html is displayed. The body can do the same, but through linking direct files and more. I'm still learning about how to use and describe these things...</p>
 
-<p>Then, you build the head and the body inside the html tags. It's all pretty cool. You'll see more of how it all comes together in the next pages. Stay tuned! </p></h3>
-
-  <h3><p>I'll admit, I've had some experience with html. There are many advanced things that I'd like to learn. Can't wait to get cooking on this portion of the course. Here we go!</p></h3>  
 </div>
 
 
