--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
   <h6><strong>image courtesy of google images (click image for more info)</strong></h6>
   <div>
 
-  <h3><p>So, I've been taugh the basics of how to make a webpage. I think this is pretty stinkin' cool! Let's dive in to talking about how to actually make a webpage using html...</p>
-  <p>You start off by telling the webpage interpreter (Google Chrome, Firefox, etc) with an html tag. It looks like.</p>
-
-<p>Then, you build the head and the body inside the html tags. It's all pretty cool. You'll see more of how it all comes together in the next pages. Stay tuned! </p></h3>
-
-  <h3><p>I'll admit, I've had some experience with html. There are many advanced things that I'd like to learn. Can't wait to get cooking on this portion of the course. Here we go!</p></h3>  
+  <h3><p>You are on the index page. This index page can take you anywhere on the website that you want to go. Feel free to click any of the links to go somewhere.</p>
+  <p>You can also read these paragraphs to get up to speed on what this page is for. There's more content to come. Stay tuned, and have a look around!</p>
 </div>
 
 
