--- a/images.html
+++ b/images.html
@@ -24,12 +24,8 @@
   <h6><strong>photo courtesy of google images (click the link for more info)</strong></h6>
   <div>
   
-  <h3><p>So, I've been taugh the basics of how to make a webpage. I think this is pretty stinkin' cool! Let's dive in to talking about how to actually make a webpage using html...</p>
-  <p>You start off by telling the webpage interpreter (Google Chrome, Firefox, etc) with an html tag. It looks like.</p>
+  <h3><p>This is a pretty cool image.</p>
 
-<p>Then, you build the head and the body inside the html tags. It's all pretty cool. You'll see more of how it all comes together in the next pages. Stay tuned! </p></h3>
-
-  <h3><p>I'll admit, I've had some experience with html. There are many advanced things that I'd like to learn. Can't wait to get cooking on this portion of the course. Here we go!</p></h3>  
 </div>
 
 
