Added list page and updated the forms page for good exposure to the concepts

--- a/forms.html
+++ b/forms.html
@@ -27,12 +27,25 @@
 
   <h3><p>Eventually, there will be some forms inside these fields. Much will change for that to happen. Stay tuned.</p>
   <p>Some form fields are: 
-    <ul>
-      <li>Radio Buttons</li>
-      <li>Check Boxes</li>
-      <li>Dropdown Menu</li>
-      <li>Submit Buttons</li>
-    </ul>
+  </br>
+</br>
+    Radio Buttons:
+    <form><input type="radio" name="Radio Button"></form>
+  </p>
+  <p>
+    Single-line Text Input:
+    <form>
+    <input type="text" name="SingleLineText">
+    
+  </form>
+</p>
+<p>
+Multi-line Text Input:
+    <form>
+    <input type="text" name="SingleLineText">
+    
+  </form>
+
     </p>
 
 <p>Then, you build the head and the body inside the html tags. It's all pretty cool. You'll see more of how it all comes together in the next pages. Stay tuned! </p></h3>
